--- a/meta/11-12.md
+++ b/meta/11-12.md
@@ -34,4 +34,6 @@ reporting_status: complete
 Lärmbelastete Fläche ist kein technisch oder rechtlich abgesicherter Ausdruck. Betrachtet man Lärmbrennpunkte im Sinne des § 47 d Bundes-Immissionsschutzgesetz als Lärmbelastete Flächen, dann wären in Ingolstadt 90 Stück vorhanden. Die Tendenz ist gleichbleibend. <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-N3.2: Umsetzung einer nachhaltigen und generationsgerechten Stadtplanung, Gemeinflächen-bedarf sicherstellen, Wohnflächen pro Kopf reduzieren
+N3.2: Umsetzung einer nachhaltigen und generationsgerechten Stadtplanung, Gemeinflächen-bedarf sicherstellen, Wohnflächen pro Kopf reduzieren<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
