--- a/meta/11-13.md
+++ b/meta/11-13.md
@@ -34,4 +34,6 @@ reporting_status: complete
 Mietpreise ohne geförderten Wohnungsbau. Angegeben wird die durchschnittliche Nettokaltmiete in € je m². <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-N3.1: Schaffung von bezahlbarem und barrierefreiem Wohnraum unter Berücksichtigung der Ressourcenschonung
+N3.1: Schaffung von bezahlbarem und barrierefreiem Wohnraum unter Berücksichtigung der Ressourcenschonung<br>
+<br>
+<b>BNK-Indikator</b>
