--- a/meta/11-14.md
+++ b/meta/11-14.md
@@ -34,4 +34,6 @@ reporting_status: complete
 Rückgang der Fläche pro Einwohner/-in aufgrund Wachstum der Einwohnerzahl. Berücksichtigt wurden nur im Flächennutzungsplan (FNP) aufgezeigte Naherholungsflächen (723 ha), demnach ist der Bereich des Schafirrsees nicht miteinbezogen.  <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-K2.7: Naherholung mit ökologischen Aspekten vereinen
+K2.7: Naherholung mit ökologischen Aspekten vereinen<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
