--- a/meta/11-15.md
+++ b/meta/11-15.md
@@ -34,5 +34,7 @@ reporting_status: complete
 Öffentliche Grünflächen in der Einheit km² je 1.000 EW in allen Stadtvierteln der Stadt Ingolstadt. Unter dem Begriff kommunale Grünflächen versteht man alle öffentlichen Freiflächen, die gärtnerisch gepflegt werden und die die Stadt der Allgemeinheit zugänglich gemacht hat. Unter diese Kategorie fallen nicht nur die großen Parkanlagen wie das Glacis, der Luitpoldpark, der Fort Haslang Park oder der Park Mailinger Aue, sondern auch die vielen kleineren Grünzüge wie der Güßgraben in Etting oder der Grünzug Märzenbecherstraße im Stadtteil Ringsee. Mehr Infos auf der Webseite des <a href="https://www.ingolstadt.de/Rathaus/Stadtgarten/Gr%C3%BCnplanung-Pflege/">Gartenamts Ingolstadt</a>.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-N3.4: Schutz und Ausbau von Grünflächen und öffentlichem Raum für alle
+N3.4: Schutz und Ausbau von Grünflächen und öffentlichem Raum für alle<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
 
