--- a/meta/11-16.md
+++ b/meta/11-16.md
@@ -34,4 +34,6 @@ reporting_status: complete
 Entfernung im innerstädtischen Bereich Luftlinie jeweils 300 Meter und in den Vorortern maximal 600 Meter Luftlinie. Entspricht den ÖPNV Richtlinien. <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-N4.1: Steigerung umweltfreundlicher und sicherer Mobilität
+N4.1: Steigerung umweltfreundlicher und sicherer Mobilität<br>
+<br>
+<b>BNK-Indikator</b>
