--- a/meta/11-17.md
+++ b/meta/11-17.md
@@ -34,4 +34,6 @@ reporting_status: complete
 Die Pkw-Dichte in der Stadt Ingolstadt ist aktuell höher als in den anderen bayerischen Großstädten. Allerdings ist die Zahl der zugelassenen Pkw in Ingolstadt aufgrund der Zuordnung von Dienstwagen und Leasing-Fahrzeugen nach oben hin verzerrt. Ein Großteil hatten eine gewerbliche Zulassung. Das führt auch dazu, dass Ingolstadt formal eine höhere Pkw-Dichte aufweist als die Nachbarlandkreise. In der Regel ist die Pkw-Dichte im ländlichen Raum eher höher als in den Metropolen.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-N4.2: Reduktion des motorisierten Individualverkehrs
+N4.2: Reduktion des motorisierten Individualverkehrs<br>
+<br>
+<b>BNK-Indikator</b>
