--- a/meta/11-19.md
+++ b/meta/11-19.md
@@ -34,4 +34,6 @@ reporting_status: complete
 Zahl der Verkehrsunfälle mit Personenschäden möglichweise u.a. aufgrund der Kontaktbeschränkungen 2020 und 2021 zurückgegangen. Seit 2022 ist wieder ein leichter Anstieg zu verzeichnen. <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-N4.5: Verbesserung der Verkehrssicherheit
+N4.5: Verbesserung der Verkehrssicherheit<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
