--- a/meta/11-2.md
+++ b/meta/11-2.md
@@ -42,4 +42,6 @@ Der gelbe Vorlesetaster mit der „text-to-speech“-Funktion wird zusammen mit 
 An den zentralen Haltestellen ZOB und Nordbahnhof verweisen Linienbezeichnungen in Braille-Schrift auf die jeweilige Bussteignummer.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-N4.3: Barrierefreie Mobilität für alle Menschen
+N4.3: Barrierefreie Mobilität für alle Menschen<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
