--- a/meta/11-5.md
+++ b/meta/11-5.md
@@ -34,4 +34,6 @@ reporting_status: complete
 Bei Verkehrsunfällen Getötete oder Schwerverletzte. Tendenz gleichbleibend mit leichtem Anstieg 2022.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-N4.5: Verbesserung der Verkehrssicherheit
+N4.5: Verbesserung der Verkehrssicherheit<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
