--- a/meta/11-6.md
+++ b/meta/11-6.md
@@ -34,4 +34,6 @@ reporting_status: complete
 Anzahl an Beteiligten an Unfällen mit Personenschaden. Starker Rückgang seit 2020. Rückgang von 2019 auf 2020 u.a. auch auf Kontaktbeschränkungen durch Covid-Politik zurückzuführen. <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-N4.5: Verbesserung der Verkehrssicherheit
+N4.5: Verbesserung der Verkehrssicherheit<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
