--- a/meta/11-7.md
+++ b/meta/11-7.md
@@ -34,4 +34,6 @@ reporting_status: inprogress
 Verhältnis naturhaushaltwirksamer Flächen zur gesamten Grundstücksfläche.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-N3.4: Schutz und Ausbau von Grünflächen und öffentlichem Raum für alle
+N3.4: Schutz und Ausbau von Grünflächen und öffentlichem Raum für alle<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
