--- a/meta/11-8.md
+++ b/meta/11-8.md
@@ -34,4 +34,6 @@ reporting_status: complete
 Anteil Heizenergien oder Fernwärme in fertiggestellten Wohngebäuden in Prozent.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-N3.3: Förderung von nachhaltigem Bauen und vermehrte Nutzung von Leerständen und Baulücken, Erhöhung der Sanierungsquote
+N3.3: Förderung von nachhaltigem Bauen und vermehrte Nutzung von Leerständen und Baulücken, Erhöhung der Sanierungsquote<br>
+<br>
+<b>BNK-Indikator</b>
