--- a/meta/11-9.md
+++ b/meta/11-9.md
@@ -34,4 +34,6 @@ reporting_status: complete
 Der Anteil der Siedlungs- und Verkehrsfläche an der Gesamtfläche in Prozent.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-K2.3: Vernetzung, Entwicklung und Erhalt schützenswerter Flächen
+K2.3: Vernetzung, Entwicklung und Erhalt schützenswerter Flächen<br>
+<br>
+<b>BNK-Indikator</b>
