--- a/meta/12-1.md
+++ b/meta/12-1.md
@@ -34,4 +34,6 @@ reporting_status: complete
 Abfallmenge der privaten Haushalte in Tonne je Einwohner/-in. <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-K4.2: Förderung der Müllvermeidung und Mülltrennung
+K4.2: Förderung der Müllvermeidung und Mülltrennung<br>
+<br>
+<b>BNK-Indikator</b>
