--- a/meta/12-2.md
+++ b/meta/12-2.md
@@ -34,4 +34,6 @@ reporting_status: complete
 Nur städtische Kitas bei Zertifizierung berücksichtigt. Aktuell ist keine städtische Kita als sogenannte FairTrade-Kita zertifiziert. Dennoch haben alle Kitas die Nachhaltigkeit im Blick und weisen mindestens 3 Faktoren, die für eine Faire Kita wichtig sind, z.B. nachhaltiges und inklusives Spielzeug, kein Einmalgeschirr, Bezug von Fair Trade zertifizierten Produkten etc., auf. Es wurde 2022 der Vorstoß unternommen, die Zertifizierungen umzusetzen. Diese ist für 2023 vorgesehen. <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-B2.1: Verankerung der Bildung für nachhaltige Entwicklung (BNE) in schulischen, außerschulischen und informellen Bildungsangeboten
+B2.1: Verankerung der Bildung für nachhaltige Entwicklung (BNE) in schulischen, außerschulischen und informellen Bildungsangeboten<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
