--- a/meta/12-4.md
+++ b/meta/12-4.md
@@ -34,4 +34,6 @@ reporting_status: complete
 Die Stadt Ingolstadt ist seit 2014 als Fairtrade-Town zertifiziert. Seitdem hat die Stadt 4 weitere Zertifizierungsprozesse durchlaufen. Eine Zertifizierung wird alle 2 Jahre durchgeführt. <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-N1.7: Unterstützung der Vermarktungsstrukturen regionaler, fairer und ökologischer Produkte und somit des regionalen Konsums
+N1.7: Unterstützung der Vermarktungsstrukturen regionaler, fairer und ökologischer Produkte und somit des regionalen Konsums<br>
+<br>
+<b>BNK-Indikator</b>
