--- a/meta/12-5.md
+++ b/meta/12-5.md
@@ -34,4 +34,6 @@ reporting_status: notapplicable
 Zurzeit sind keine Daten für Ingolstadt vorhanden, da Materialien aus der gesamten Region zusammengeführt werden. <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-K4.2: Förderung der Müllvermeidung und Mülltrennung
+K4.2: Förderung der Müllvermeidung und Mülltrennung<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
