--- a/meta/12-6.md
+++ b/meta/12-6.md
@@ -34,4 +34,6 @@ reporting_status: complete
 Veröffentlichung im Rahmen des Jahresabschlusses der Ingolstädter Kommunalbetriebe (INKB).  <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-N1.5: Mehr Selbstversorgung und Urban Gardening fördern
+N1.5: Mehr Selbstversorgung und Urban Gardening fördern<br>
+<br>
+<b>BNK-Indikator</b>
