--- a/meta/13-2.md
+++ b/meta/13-2.md
@@ -32,4 +32,6 @@ reporting_status: notapplicable
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-K1.1: Reduktion von Treibhausgasemissionen: klimaneutral stadtweit bis 2035
+K1.1: Reduktion von Treibhausgasemissionen: klimaneutral stadtweit bis 2035<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
