--- a/meta/13-3.md
+++ b/meta/13-3.md
@@ -34,4 +34,6 @@ reporting_status: complete
 Heißer Tag oder Hitzetag, ist die meteorologisch-klimatologische Bezeichnung für Tage, an denen die Tageshöchsttemperatur 30 °C erreicht oder übersteigt. Er wird zur genaueren Darstellung des Klimas eines Ortes und zur Beurteilung von Hitzewellen herangezogen. Gemessen wird in einer Standard-Wetterhütte in zwei Metern Höhe. Die Menge der heißen Tage ist eine Untermenge der Sommertage. Sinkt die Tagestiefsttemperatur nicht unter 20 °C, spricht man zusätzlich von Tropennacht.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-K3.2: Entgegenwirken von Hitzeinseln (Vermeiden durch Ausbau der grünen Infrastruktur, Berücksichtigung von Kaltluftschneisen zur Belüftung der Siedlungsbereiche)
+K3.2: Entgegenwirken von Hitzeinseln (Vermeiden durch Ausbau der grünen Infrastruktur, Berücksichtigung von Kaltluftschneisen zur Belüftung der Siedlungsbereiche)<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
