--- a/meta/13-4.md
+++ b/meta/13-4.md
@@ -32,4 +32,6 @@ reporting_status: inprogress
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-K2.5: Schutz und Begünstigung der Biodiversität
+K2.5: Schutz und Begünstigung der Biodiversität<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
