--- a/meta/14-2.md
+++ b/meta/14-2.md
@@ -34,4 +34,6 @@ reporting_status: complete
 Eine Einstufung nach EU-Badegewässerrichtlinien wird unter Durchführung einer speziellen Konformitätsberechnung vorgenommen. Hierzu werden alle Messwerte der letzten vier Jahre herangezogen. Die Einstufung der Badegewässer erfolgt aufgrund der durchgeführten Bewertung nach dem Ende jeder Badesaison. Sie beschreibt den qualitativen Zustand der Badegewässer anhand der mikrobiologischen Parameter Escherichia coli und Intestinale Enterokokken über den Zeitraum der letzten 4 Jahre in den Kategorien “Ausgezeichnet” (3), “Gut” (2), “Ausreichend” (1), “Mangelhaft” (0). Genaue Daten sind hier zu finden <a href="https://eur-lex.europa.eu/legal-content/DE/TXT/?qid=1534167377521&uri=CELEX:02006L0007-20140101">Gewässerqualität</a><br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-K4.1: Sorgsamer Umgang mit der Ressource Wasser, blaue Infrastruktur schützen und fördern
+K4.1: Sorgsamer Umgang mit der Ressource Wasser, blaue Infrastruktur schützen und fördern<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
