--- a/meta/15-1.md
+++ b/meta/15-1.md
@@ -34,4 +34,6 @@ reporting_status: complete
 Anteil der ökologisch bewirtschafteten Fläche an der landwirtschaftlich genutzten Fläche in Ingolstad. Hier sind die Flächenangaben aller Betriebe in Ingolstadt mit ihren gesamten bewirtschafteten Flächen berücksichtigt.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-K2.1: Unterstützung einer nachhaltigen, regionalen Landwirtschaft und Erhalt landwirtschaftlicher Flächen
+K2.1: Unterstützung einer nachhaltigen, regionalen Landwirtschaft und Erhalt landwirtschaftlicher Flächen<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
