--- a/meta/15-2.md
+++ b/meta/15-2.md
@@ -32,4 +32,6 @@ reporting_status: inprogress
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-K2.3: Vernetzung, Entwicklung und Erhalt schützenswerter Flächen
+K2.3: Vernetzung, Entwicklung und Erhalt schützenswerter Flächen<br>
+<br>
+<b>BNK-Indikator</b>
