--- a/meta/15-3.md
+++ b/meta/15-3.md
@@ -34,4 +34,6 @@ reporting_status: inprogress
 Derzeit nur ältere Daten ohne digitale Abrufbarkeit von Zahlen vorliegend, Aktualisierung durch biol. Kartierung (LfU) geplant. Auswertung 2023 abgeschlossen.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-K2.5: Schutz und Begünstigung der Biodiversität
+K2.5: Schutz und Begünstigung der Biodiversität<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
