--- a/meta/15-4.md
+++ b/meta/15-4.md
@@ -34,4 +34,6 @@ reporting_status: complete
 Angelegte Ausgleichsflächen entsprechend den Vorgaben der zur Satzung beschlossenen Bebauungspläne.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-K4.3: Ressourcenschonender Umgang mit Flächen und Baustoffen – Förderung der Wiederverwendbarkeit und Wiederverwendung von Baustoffen
+K4.3: Ressourcenschonender Umgang mit Flächen und Baustoffen – Förderung der Wiederverwendbarkeit und Wiederverwendung von Baustoffen<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
