--- a/meta/15-5.md
+++ b/meta/15-5.md
@@ -34,5 +34,7 @@ reporting_status: complete
 Die Waldflächenbilanz ergibt sich aus den Ab- und Zugängen bewaldeter Flächen. Die Angaben beziehen sich auf die gesamte Region 10. Eine Bilanz nur für das Stadtgebiet Ingolstadt wird derzeit nicht erstellt.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-K2.2: Unterstützung einer naturnahen Forstwirtschaft und Erhalt der Waldfläche
+K2.2: Unterstützung einer naturnahen Forstwirtschaft und Erhalt der Waldfläche<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
 
