--- a/meta/16-3.md
+++ b/meta/16-3.md
@@ -31,4 +31,6 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Reduzierung erfolgt aufgrund einer Vielzahl von Gründen, u.a. Verringerung der Steuereinnahmen bei gleichzeitigem Anstieg der Ausgaben. Dazu gehören Sach- und Personalkosten.
+Reduzierung erfolgt aufgrund einer Vielzahl von Gründen, u.a. Verringerung der Steuereinnahmen bei gleichzeitigem Anstieg der Ausgaben. Dazu gehören Sach- und Personalkosten.<br>
+<br>
+<b>BNK-Indikator</b>
