--- a/meta/16-5.md
+++ b/meta/16-5.md
@@ -31,4 +31,6 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-2020 und 2021 sind deutliche Einbrüche bei der Gewerbesteuer aufgrund der COVID-19-Pandemie zu verzeichnen. Gewerbesteuerkompensationszahlung wird nicht als Steuereinnahme erfasst und fließt daher nicht in die Daten mit ein.
+2020 und 2021 sind deutliche Einbrüche bei der Gewerbesteuer aufgrund der COVID-19-Pandemie zu verzeichnen. Gewerbesteuerkompensationszahlung wird nicht als Steuereinnahme erfasst und fließt daher nicht in die Daten mit ein.<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
