--- a/meta/16-6.md
+++ b/meta/16-6.md
@@ -34,4 +34,6 @@ reporting_status: complete
 Polizeilich gemeldete Straftaten je 1.000 Einwohner/-innen in Ingolstadt. In der Polizeilichen Kriminalstatistik werden die von den bayerischen Polizeidienststellen bearbeiteten rechtswidrigen (Straf-)Taten einschließlich der mit Strafe bedrohten Versuche sowie die ermittelten Tatverdächtigen erfasst, sofern die Taten im Freistaat Bayern begangen wurden. Einbezogen sind auch die von den Zollbehörden gemeldeten Rauschgiftdelikte. Nicht enthalten sind (echte) Staatsschutzdelikte und Verkehrsdelikte. Die Erfassung erfolgt nach genau bestimmten "Regeln für die Fallerfassung" und orientiert sich an einem unter teils strafrechtlichen, teils kriminologischen Aspekten aufgebauten "Straftatenkatalog", der seit 1971 mehrfach ergänzt und erweitert worden ist. <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-V1.8: Schutz und Prävention vor häuslicher und sexueller Gewalt und Diskriminierung, Reduzierung der Gewalttaten und der Gewalt in Einrichtungen für Menschen mit Behinderung
+V1.8: Schutz und Prävention vor häuslicher und sexueller Gewalt und Diskriminierung, Reduzierung der Gewalttaten und der Gewalt in Einrichtungen für Menschen mit Behinderung<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
