--- a/meta/17-1.md
+++ b/meta/17-1.md
@@ -34,4 +34,6 @@ reporting_status: complete
 Größtes Projekt ist die Projektpartnerschaft mit der Gemeinde Legmoin im westafrikanischen Burkina Faso. Die Partnerstädte Grasse und Ingolstadt engagieren sich seit 2006 für die Errichtung von Trinkwasserbrunnen, dezentraler Photovoltaik und den Ausbau der Bildungsmöglichkeiten. Ein Willkommenszentrum mit kleiner Krankenstation ist derzeit in Planung.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-V2.8: Förderung und Pflege von Netzwerken und Partnerschaften
+V2.8: Förderung und Pflege von Netzwerken und Partnerschaften<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
