--- a/meta/17-2.md
+++ b/meta/17-2.md
@@ -34,4 +34,6 @@ reporting_status: complete
 Manisa/Türkei, Moskau Zentralbezirk/Russland (derzeit ruhend), Murska Sobota/Slowenien. Zudem Projektpartnerschaft Legmoin/Burkina Faso und Patenschaften für Heimatverbände; Auswirkungen der Pandemie auf Durchführung von Veranstaltungen ab 2020.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-V2.7: Interkommunale/r, überregionale/r und internationale/r Austausch und Zusammenarbeit
+V2.7: Interkommunale/r, überregionale/r und internationale/r Austausch und Zusammenarbeit<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
