--- a/meta/3-1.md
+++ b/meta/3-1.md
@@ -35,4 +35,6 @@ Kurzzeitpflege ist dabei auf einen Zeitraum von bis zu acht Wochen im Jahr begre
 Die Zahl der Langzeitpflegeplätze setzt sich aus den vollstationären und den Hospizplätzen zusammen. Kurzzeitpflegeplätze werden vom Ingolstädter Gesundheitsamt derzeit nicht erhoben.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
-N2.5: Ermöglichung eines guten Lebens im Alter
+N2.5: Ermöglichung eines guten Lebens im Alter<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
