--- a/meta/3-2.md
+++ b/meta/3-2.md
@@ -42,4 +42,6 @@ Prävention ist im Gesundheitswesen ein Oberbegriff für zielgerichtete Maßnahm
 Quelle: <a href="https://www.praevention.at/sucht-und-suchtvorbeugung/begriffs-und-problemdefinitionen/der-begriff-praevention">Institut Suchtprävention</a> und <a href="https://www.bundesgesundheitsministerium.de/service/begriffe-von-a-z/p/praevention.html">Bundesgesundheitsministerium</a><br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
-N2.1: Reduzierung der gesundheitlichen physischen und psychischen Belastung und Sicherstellung von ausreichenden Präventions- und Suchtmaßnahmen
+N2.1: Reduzierung der gesundheitlichen physischen und psychischen Belastung und Sicherstellung von ausreichenden Präventions- und Suchtmaßnahmen<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
