--- a/meta/3-6.md
+++ b/meta/3-6.md
@@ -39,9 +39,9 @@ Gemeldete Arbeitsstellen nach Berufsgruppen und Anforderungsniveau:
 - Tiermedizin und Tierheilkunde
 - Psychologie, nichtärztl. Psychotherapie
 - Nicht ärtzliche Therapie und Heilkunde
-- Pharmazie
-+
-- Unbesetzte betriebliche Berufsausbildungsstellen
+- Pharmazie<br>
+<br>
+Unbesetzte betriebliche Berufsausbildungsstellen
 - Arzt- und Praxishilfe
 - Gesundh., Krankenpfl, Rettungsd., Geburtsh.
 - Psychologie, nichtärztliche Psychotherapie
@@ -49,4 +49,6 @@ Gemeldete Arbeitsstellen nach Berufsgruppen und Anforderungsniveau:
 (Daten für 2023: Stand 03.2023)  <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
-N2.4: Sicherstellung einer ausreichenden medizinischen Infrastruktur im städtischen Raum
+N2.4: Sicherstellung einer ausreichenden medizinischen Infrastruktur im städtischen Raum<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
