--- a/meta/3-6.md
+++ b/meta/3-6.md
@@ -41,10 +41,7 @@ Gemeldete Arbeitsstellen nach Berufsgruppen und Anforderungsniveau:
 - Nicht ärtzliche Therapie und Heilkunde
 - Pharmazie<br>
 <br>
-Unbesetzte betriebliche Berufsausbildungsstellen
-- Arzt- und Praxishilfe
-- Gesundh., Krankenpfl, Rettungsd., Geburtsh.
-- Psychologie, nichtärztliche Psychotherapie
+Unbesetzte betriebliche Berufsausbildungsstellen: Arzt- und Praxishilfe, Gesundh., Krankenpfl, Rettungsd., Geburtsh., Psychologie, nichtärztliche Psychotherapie
 
 (Daten für 2023: Stand 03.2023)  <br>
 <br>
