--- a/meta/3-7.md
+++ b/meta/3-7.md
@@ -34,4 +34,6 @@ reporting_status: complete
 Anzahl der Todesfälle von Personen unter 70 Jahren. <br> 
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-N2.5: Ermöglichung eines guten Lebens im Alter
+N2.5: Ermöglichung eines guten Lebens im Alter<br>
+<br>
+<b>BNK-Indikator</b>
