--- a/meta/3-8.md
+++ b/meta/3-8.md
@@ -34,4 +34,6 @@ reporting_status: complete
 Anzahl der Krankenhausbetten je 100.000 Einwohner/-innen. <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-N2.4: Sicherstellung einer ausreichenden medizinischen Infrastruktur im städtischen Raum
+N2.4: Sicherstellung einer ausreichenden medizinischen Infrastruktur im städtischen Raum<br>
+<br>
+<b>BNK-Indikator</b>
