--- a/meta/4-1.md
+++ b/meta/4-1.md
@@ -39,4 +39,6 @@ reporting_status: complete
 Anzahl der Studierenden der Technischen Hochschule Ingolstadt (THI), Wirtschaftsfakultät Ingolstadt (WFI) und der Katholischen Universität Eichstätt-Ingolstadt (KU) immer zum 1.12. des jeweiligen Jahres.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
-W2.3: Förderung der Wissenschaft und deren Vernetzung mit Gesellschaft und Wirtschaft (in allen Branchen, Unternehmensformen/-größen)
+W2.3: Förderung der Wissenschaft und deren Vernetzung mit Gesellschaft und Wirtschaft (in allen Branchen, Unternehmensformen/-größen)<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
