--- a/meta/4-2.md
+++ b/meta/4-2.md
@@ -39,4 +39,6 @@ Berufsbegleitende Weiterbildungen – aktuell laufen 49 berufsbegleitende Weiter
 Fachspezifische Fortbildungen (vorwiegend über die Bayerische Verwaltungsschule und andere externe Anbieter) – letztes Jahr waren es insgesamt 610 Inanspruchnahmen auf Anfrage der Mitarbeiter/-innen aus allen Ämtern<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
-W3.2: Sicherung einer qualitativ hochwertigen Beschäftigung
+W3.2: Sicherung einer qualitativ hochwertigen Beschäftigung<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
