--- a/meta/4-3.md
+++ b/meta/4-3.md
@@ -35,4 +35,6 @@ reporting_status: complete
 Prozentualer Anteil der unter drei-jährigen Kindern in öffentlichen Kindertagesstätten. Der Ausbau der Krippenplätze  schreitet voran und in den nächsten Jahren werden weitere Einrichtungen eröffnet. <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-B2.4: Förderung der Bildungsteilhabe bzw. Bildungsgerechtigkeit
+B2.4: Förderung der Bildungsteilhabe bzw. Bildungsgerechtigkeit<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
