--- a/meta/4-5.md
+++ b/meta/4-5.md
@@ -34,4 +34,6 @@ reporting_status: complete
 Anzahl der unter 3-jährigen Kinder in öff. Tageseinrichtungen.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-B2.4: Förderung der Bildungsteilhabe bzw. Bildungsgerechtigkeit
+B2.4: Förderung der Bildungsteilhabe bzw. Bildungsgerechtigkeit<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
