--- a/meta/4-7.md
+++ b/meta/4-7.md
@@ -36,4 +36,6 @@ reporting_status: complete
 Prozentualer Anteil Schulabbrechenden ohne Mittelschulabschluss. <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-B2.4: Förderung der Bildungsteilhabe bzw. Bildungsgerechtigkeit
+B2.4: Förderung der Bildungsteilhabe bzw. Bildungsgerechtigkeit<br>
+<br>
+<b>BNK-Indikator</b>
