--- a/meta/4-8.md
+++ b/meta/4-8.md
@@ -34,4 +34,6 @@ reporting_status: complete
 In den Teilnehmerzahlen gibt es keine Unterscheidung zwischen Erwachsenen und Jugendlichen. Es ist die Gesamtzahl der Teilnehmenden in der Erwachsenenbildungseinrichtung der VHS. Daher ist nur die Ermittlung der Gesamtteilnehmer-Zahl pro Jahr möglich; Hinzu kommen die Teilnehmer an der Simon-Mayr-Sing- und Musikschule: Ermittlung/Definition = Anzahl (Kopfzahlen) der belegten Kurse von Personen ab 18 Jahren (bis auf EMP (Elementare Musikpädagogik) sind alle Angebote für Erwachsene offen). <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-W3.1: Förderung von lebenslangem Lernen (inkl. Menschen in besonderen Lebenslagen)
+W3.1: Förderung von lebenslangem Lernen (inkl. Menschen in besonderen Lebenslagen)<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
