--- a/meta/5-1.md
+++ b/meta/5-1.md
@@ -70,4 +70,6 @@ Die Anzahl der Angebote für Vereinbarkeit von Beruf und Familie für städtisch
  </ul><br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-W3.3: Erreichung gleicher wirtschaftlicher Unabhängigkeit durch gleiche und gleichwertige Arbeit
+W3.3: Erreichung gleicher wirtschaftlicher Unabhängigkeit durch gleiche und gleichwertige Arbeit<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
