--- a/meta/5-2.md
+++ b/meta/5-2.md
@@ -34,4 +34,6 @@ reporting_status: complete
 Anzahl der Empfänger/-innen von Hilfe zum Lebensunterhalt. Zum notwendigen Lebensunterhalt gehören nach § 27a SGB XII "insbesondere Ernährung, Unterkunft, Kleidung, Körperpflege, Hausrat, Heizung und persönliche Bedürfnisse des täglichen Lebens". Zu letzteren gehören "in vertretbarem Umfang auch Beziehungen zur Umwelt und eine Teilnahme am kulturellen Leben."<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-V1.10: Armutsbekämpfung
+V1.10: Armutsbekämpfung<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
