--- a/meta/5-3.md
+++ b/meta/5-3.md
@@ -34,4 +34,6 @@ reporting_status: complete
 Anzahl von Empfänger/-innen von sozialer Mindestsicherung insgesamt (ohne Asylbewerber und BaföG-Empfänger). Die Transferleistungen der sozialen Mindestsicherungssysteme sind finanzielle Hilfen des Staates, die – zumindest ergänzend zu eventuell vorhandenen anderen Einkünften – zur Sicherung des grundlegenden Lebensunterhalts an leistungsberechtigte Personen ausgezahlt werden.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-V1.10: Armutsbekämpfung
+V1.10: Armutsbekämpfung<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
