--- a/meta/5-4.md
+++ b/meta/5-4.md
@@ -34,4 +34,6 @@ reporting_status: complete
 Prozentualer Frauenanteil im Stadtrat, Gemeinderat bzw. Kreistag.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-V1.5: Förderung von Integration, Inklusion und Gleichstellung der Verwaltungsgremien
+V1.5: Förderung von Integration, Inklusion und Gleichstellung der Verwaltungsgremien<br>
+<br>
+<b>BNK-Indikator</b>
