--- a/meta/5-5.md
+++ b/meta/5-5.md
@@ -35,4 +35,6 @@ reporting_status: complete
 Quote der sozialversicherungspflichtig beschäftigten Frauen und Männer zwischen 15 - 65 Jahren. <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-W3.3: Erreichung gleicher wirtschaftlicher Unabhängigkeit durch gleiche und gleichwertige Arbeit
+W3.3: Erreichung gleicher wirtschaftlicher Unabhängigkeit durch gleiche und gleichwertige Arbeit<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
