--- a/meta/5-6.md
+++ b/meta/5-6.md
@@ -34,4 +34,6 @@ reporting_status: complete
 Der Verdienstabstand zwischen Frauen und Männern in Euro, gemessen am Medianeinkommen.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-V1.3: Förderung der geschlechterunabhängigen Chancengleichheit
+V1.3: Förderung der geschlechterunabhängigen Chancengleichheit<br>
+<br>
+<b>BNK-Indikator</b>
