--- a/meta/6-1.md
+++ b/meta/6-1.md
@@ -34,4 +34,6 @@ reporting_status: inprogress
 Anzahl sanitärer Einrichtungen im öffentlichen Raum.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-N1.6: Schaffung von sanitären Einrichtungen im öffentlichen Raum, Barrierefreiheit beachten, Sicherung vor Vandalismus
+N1.6: Schaffung von sanitären Einrichtungen im öffentlichen Raum, Barrierefreiheit beachten, Sicherung vor Vandalismus<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
