--- a/meta/6-2.md
+++ b/meta/6-2.md
@@ -34,4 +34,6 @@ reporting_status: complete
 Anzahl der Trinkwasserspender im Stadtgebiet Ingolstadt<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-N1.6: Schaffung von sanitären Einrichtungen im öffentlichen Raum, Barrierefreiheit beachten, Sicherung vor Vandalismus
+N1.6: Schaffung von sanitären Einrichtungen im öffentlichen Raum, Barrierefreiheit beachten, Sicherung vor Vandalismus<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
