--- a/meta/6-3.md
+++ b/meta/6-3.md
@@ -42,4 +42,6 @@ Betreiber: WWA Ingolstadt <br>
 Nitrat (mg/l): 8.1 (Letzter Stand: 3.11.2021)<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-K2.3: Vernetzung, Entwicklung und Erhalt schützenswerter Flächen
+K2.3: Vernetzung, Entwicklung und Erhalt schützenswerter Flächen<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
