--- a/meta/6-4.md
+++ b/meta/6-4.md
@@ -34,4 +34,6 @@ reporting_status: inprogress
 In einem Mischwasserkanal wird Schmutz- und Regenwasser gemeinsam abgeleitet, bei Trennkanalisation erfolgt die Ableitung in getrennten Schmutz- und Regenwasserkanälen.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-K2.6: Sicherstellung einer funktionierenden Abwasserbehandlung
+K2.6: Sicherstellung einer funktionierenden Abwasserbehandlung<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
