--- a/meta/7-2.md
+++ b/meta/7-2.md
@@ -41,4 +41,6 @@ Geplante Anlagen sind in dieser Grafik nicht berücksichtigt.<br>
 Stand der Auswertung: 7. Juni 2023<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-K1.2: Ausbau von erneuerbaren Energien, insbesondere Erzeugung von regenerativem Strom vor Ort
+K1.2: Ausbau von erneuerbaren Energien, insbesondere Erzeugung von regenerativem Strom vor Ort<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
