--- a/meta/7-3.md
+++ b/meta/7-3.md
@@ -43,4 +43,6 @@ Die CO2-Bilanz wird momentan alle 2 Jahre aktualisiert, da auf dieser Ebene jäh
 <b>Erläuterung: GHD-Emissionen sind alle Emissionen des Sektor Gewerbe, Handel, Dienstleistungen und übrige Verbraucher</b><br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-K1.1: Reduktion von Treibhausgasemissionen: klimaneutral stadtweit bis 2035
+K1.1: Reduktion von Treibhausgasemissionen: klimaneutral stadtweit bis 2035<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
