--- a/meta/8-1.md
+++ b/meta/8-1.md
@@ -38,4 +38,6 @@ Anteil der erwerbstätigen ALG-II Bezieher/-innen an allen erwerbsfähigen Leist
 Quelle: <a href="https://www.bundesregierung.de/breg-de/schwerpunkte/entlastung-fuer-deutschland/buergergeld-2125010">Bundesregierung</a><br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-W3.1: Förderung von lebenslangem Lernen (inkl. Menschen in besonderen Lebenslagen)
+W3.1: Förderung von lebenslangem Lernen (inkl. Menschen in besonderen Lebenslagen)<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
