--- a/meta/8-2.md
+++ b/meta/8-2.md
@@ -35,4 +35,6 @@ reporting_status: complete
 Prozentualer Anteil der Beschäftigten im Alter von 15 bis 64 Jahre. <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-W3.3: Erreichung gleicher wirtschaftlicher Unabhängigkeit durch gleiche und gleichwertige Arbeit
+W3.3: Erreichung gleicher wirtschaftlicher Unabhängigkeit durch gleiche und gleichwertige Arbeit<br>
+<br>
+<b>BNK-Indikator</b>
