--- a/meta/8-3.md
+++ b/meta/8-3.md
@@ -32,4 +32,6 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Bruttoinlandsprodukt in € je Einwohner/-in in Ingolstadt. <br> 
+Bruttoinlandsprodukt in € je Einwohner/-in in Ingolstadt.<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
