--- a/meta/8-4.md
+++ b/meta/8-4.md
@@ -36,4 +36,6 @@ reporting_status: complete
 Die Drittmittel sind die Summen der für das Kalenderjahr verbuchten Einnahmen (31.12.). <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-W2.3: Förderung der Wissenschaft und deren Vernetzung mit Gesellschaft und Wirtschaft (in allen Branchen, Unternehmensformen/-größen)
+W2.3: Förderung der Wissenschaft und deren Vernetzung mit Gesellschaft und Wirtschaft (in allen Branchen, Unternehmensformen/-größen)<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
