--- a/meta/8-6.md
+++ b/meta/8-6.md
@@ -34,4 +34,6 @@ reporting_status: complete
 Anzahl der sozialversicherungspflichtig Beschäftigten im Alter von 55 und älter.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-W3.3: Erreichung gleicher wirtschaftlicher Unabhängigkeit durch gleiche und gleichwertige Arbeit
+W3.3: Erreichung gleicher wirtschaftlicher Unabhängigkeit durch gleiche und gleichwertige Arbeit<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
