--- a/meta/9-1.md
+++ b/meta/9-1.md
@@ -34,4 +34,6 @@ reporting_status: complete
 Gesamtzahl der angesiedelten Unternehmen im Existenzgründerzentrum (EGZ) und im digitalen Gründerzentrum brigk in Ingolstadt.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-W1.2: Förderung branchenübergreifender Existenzgründungen zum Aufbau einer diversen Wirtschaftsstruktur
+W1.2: Förderung branchenübergreifender Existenzgründungen zum Aufbau einer diversen Wirtschaftsstruktur<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
