--- a/meta/9-2.md
+++ b/meta/9-2.md
@@ -34,4 +34,6 @@ reporting_status: complete
 Der Glasfaserausbau ist in Ingolstadt bis auf die Innenstadt abgeschlossen.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-N3.2: Umsetzung einer nachhaltigen und generationsgerechten Stadtplanung, Gemeinflächen-bedarf sicherstellen, Wohnflächen pro Kopf reduzieren
+N3.2: Umsetzung einer nachhaltigen und generationsgerechten Stadtplanung, Gemeinflächen-bedarf sicherstellen, Wohnflächen pro Kopf reduzieren<br>
+<br>
+<b>BNK-Indikator</b>
