--- a/meta/9-3.md
+++ b/meta/9-3.md
@@ -35,4 +35,6 @@ reporting_status: complete
 Existenzgründungen je 1.000 Einwohner. Eine natürliche Person, die eine gewerbliche oder selbstständige berufliche Tätigkeit aufnimmt (§ 507 BGB).<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-W1.2: Förderung branchenübergreifender Existenzgründungen zum Aufbau einer diversen Wirtschaftsstruktur
+W1.2: Förderung branchenübergreifender Existenzgründungen zum Aufbau einer diversen Wirtschaftsstruktur<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
