--- a/meta/9-4.md
+++ b/meta/9-4.md
@@ -37,6 +37,8 @@ Arbeitsort: Ingolstadt
 Stichtag: Juni
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-W3.3: Erreichung gleicher wirtschaftlicher Unabhängigkeit durch gleiche und gleichwertige Arbeit
+W3.3: Erreichung gleicher wirtschaftlicher Unabhängigkeit durch gleiche und gleichwertige Arbeit<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
 
 
