--- a/meta/16-5.md
+++ b/meta/16-5.md
@@ -33,4 +33,4 @@ reporting_status: complete
 ---
 2020 und 2021 sind deutliche Einbrüche bei der Gewerbesteuer aufgrund der COVID-19-Pandemie zu verzeichnen. Gewerbesteuerkompensationszahlung wird nicht als Steuereinnahme erfasst und fließt daher nicht in die Daten mit ein.<br>
 <br>
-<b>Ingolstadtspezifischer Indikator</b>
+<b>BNK-Indikator</b>
