--- a/meta/7-2.md
+++ b/meta/7-2.md
@@ -38,7 +38,7 @@ Geplante Anlagen sind in dieser Grafik nicht berücksichtigt.<br>
 Stand der Auswertung: 26.01.2024<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-K1.2: Ausbau von erneuerbaren Energien, insbesondere Erzeugung von regenerativem Strom vor Ort<br>
+K1.2 Ausbau von erneuerbaren Energien, insbesondere Erzeugung von regenerativem Strom vor Ort<br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
 
