--- a/meta/7-2.md
+++ b/meta/7-2.md
@@ -33,7 +33,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Dieser Indikator gibt den Zubau an Photovoltaik in Kilowatt Peak (kWp) ab 1993 sowie die installierte Gesamtleistung der jeweiligen Jahre an. Die Gesamtleistung der städtischen Anlagen bezieht sich ausschlielßlich auf die installierte Leistung auf Gebäuden in städtischer Hand.<br>
+Dieser Indikator gibt den Zubau an Photovoltaik in Kilowatt Peak (kWp) ab 1993 sowie die installierte Gesamtleistung der jeweiligen Jahre an. Die Gesamtleistung der städtischen Anlagen bezieht sich ausschlielßlich auf die installierte Leistung auf Gebäuden, welche sich in städtischer Hand befinden.<br>
 Geplante Anlagen sind in dieser Grafik nicht berücksichtigt.<br>
 Stand der Auswertung: 26.01.2024<br>
 <br>
