--- a/meta/12-1.md
+++ b/meta/12-1.md
@@ -9,19 +9,41 @@ indicator_sort_order: 12-01-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: bar  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Tonne je Einwohner/-in
+computation_units: kg je Einwohner/-in
 data_start_values:  # initialize the field to be shown  
- - field: Region 
-   value: Ingolstadt 
- - field: Region 
-   value: Bayern 
+ - field: Abfallart
+   value: Restmüll 
+ - field: Abfallart
+   value: Biomüll
+ - field: Abfallart
+   value: Papier
+ - field: Abfallart
+   value: Sperrmüll
+ - field: Abfallart
+   value: Altholz
+ - field: Abfallart
+   value: Metalschrott
+ - field: Abfallart
+   value: Elektrogeräte
+ - field: Abfallart
+   value: Textilien
+ - field: Abfallart
+   value: Grüngut
+ - field: Abfallart
+   value: Bauschutt
+ - field: Abfallart
+   value: gelber Sack
+ - field: Abfallart
+   value: Flaschenglas
+ - field: Abfallart
+   value: gesamt                                           
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt
 computation_definitions: 
 
 SOURCE_TYPE: Ingolstädter Kommunalbetriebe  # data source  
-source_earliest_available_1: 2019
+source_earliest_available_1: 2013
 source_periodicity_1: Jährlich
 
 language: de   
@@ -31,7 +53,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Abfallmenge der privaten Haushalte in Tonne je Einwohner/-in. <br>
+Abfallmenge der privaten Haushalte in kg je Einwohner/-in. <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 K4.2: Förderung der Müllvermeidung und Mülltrennung<br>
