--- a/meta/12-1.md
+++ b/meta/12-1.md
@@ -53,7 +53,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Abfallmenge der privaten Haushalte in kg je Einwohner/-in. <br>
+Abfallmenge der privaten Haushalte in kg je Einwohner/-in unterteilt in die verschiedenen Abfallarten. <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 K4.2: Förderung der Müllvermeidung und Mülltrennung<br>
