--- a/meta/11-4.md
+++ b/meta/11-4.md
@@ -31,7 +31,10 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Die Starkregengefahrenkarte zeigt potenzielle Gefahrenbereiche aufgrund von Starkregenereignissen an. Sie ist Teil des Sturzflutrisikomanagements, welches Ingolstadt als eine der ersten bayerischen Großstädte umgesetzt hat. Die Karte dient als Grundlage für Vorsorgemaßnahmen im privaten und kommunalen Bereich. Mit den angezeigten Überflutungsflächen kann man gezielt Schutzmaßnahmen umsetzen, um Schäden durch Starkregen zu vermeiden. Die Karte basiert auf Modellberechnungen. Dazu wurden im gesamten Stadtgebiet die Gegebenheiten vor Ort aufgenommen und analysiert. Danach wurden Modellberechnungen durchgeführt. Anhand dieser Daten ist es möglich, die Überflutungsflächen bei unterschiedlich intensiven Starkregenfällen zu berechnen und in einer Karte darzustellen. <a href="https://sas.starkregen.de/09161000/webviewer">Zur Starkregengefahrenkarte</a> <br>
+Die Starkregengefahrenkarte zeigt potenzielle Gefahrenbereiche aufgrund von Starkregenereignissen an. Sie ist Teil des Sturzflutrisikomanagements, welches Ingolstadt als eine der ersten bayerischen Großstädte umgesetzt hat. Die Karte dient als Grundlage für Vorsorgemaßnahmen im privaten und kommunalen Bereich. Mit den angezeigten Überflutungsflächen kann man gezielt Schutzmaßnahmen umsetzen, um Schäden durch Starkregen zu vermeiden. Die Karte basiert auf Modellberechnungen. Dazu wurden im gesamten Stadtgebiet die Gegebenheiten vor Ort aufgenommen und analysiert. Danach wurden Modellberechnungen durchgeführt. Anhand dieser Daten ist es möglich, die Überflutungsflächen bei unterschiedlich intensiven Starkregenfällen zu berechnen und in einer Karte darzustellen.<br>
+So kann der Öffentlichkeit eine gute Möglichkeit zur Risikoabschätzung zur Verfügung gestellt werden. Auf kommunaler Ebene können anhand der Ermittlung der Risiken durch Überflutungshöhen, Fließwegberechnungen und Fließgeschwindigkeitssimulationen konkrete Gefahrenbereiche identifiziert, und risikominimierende Maßnahmen geplant und umgesetzt werden.<br>
+Die Starkregengefahrenkarte finden Sie unter folgendem Link: <a href="https://sas.starkregen.de/09161000/webviewer">Zur Starkregengefahrenkarte</a> <br>
+Weitere Auskünfte hierzu können Ihnen auch die Ingolstädter Kommunalbetriebe direkt geben: <a href="https://www.in-kb.de/Entw%C3%A4sserung/Starkregen/">Kontakt und weitere Informationen</a> <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 K3.1: Förderung des präventiven Hochwasserschutzes und Überflutungsvorsorge (u.a. durch Steigerung der Schwammfähigkeit der Stadt / Speicherfähigkeit von Wasser)<br>
