--- a/meta/11-4.md
+++ b/meta/11-4.md
@@ -37,7 +37,7 @@ So kann der Öffentlichkeit eine gute Möglichkeit zur Risikoabschätzung zur Ve
 <br>
 Die Starkregengefahrenkarte finden Sie unter folgendem Link: <a href="https://sas.starkregen.de/09161000/webviewer">Zur Starkregengefahrenkarte</a> <br>
 <br>
-Weitere Auskünfte hierzu können Ihnen auch die Ingolstädter Kommunalbetriebe direkt geben: <a href="https://www.in-kb.de/Entw%C3%A4sserung/Starkregen/">Kontakt und weitere Informationen</a> <br>
+Weitere Auskünfte hierzu können Ihnen auch die Ingolstädter Kommunalbetriebe (INKB) direkt geben: <a href="https://www.in-kb.de/Entw%C3%A4sserung/Starkregen/">Kontakt und weitere Informationen</a> <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 K3.1: Förderung des präventiven Hochwasserschutzes und Überflutungsvorsorge (u.a. durch Steigerung der Schwammfähigkeit der Stadt / Speicherfähigkeit von Wasser)<br>
