--- a/meta/3-6.md
+++ b/meta/3-6.md
@@ -41,9 +41,9 @@ Gemeldete Arbeitsstellen nach Berufsgruppen und Anforderungsniveau:
 - Nicht ärtzliche Therapie und Heilkunde
 - Pharmazie<br>
 <br>
-Unbesetzte betriebliche Berufsausbildungsstellen: Arzt- und Praxishilfe, Gesundh., Krankenpfl, Rettungsd., Geburtsh., Psychologie, nichtärztliche Psychotherapie
-
-(Daten für 2023: Stand 03.2023)  <br>
+Unbesetzte betriebliche Berufsausbildungsstellen: Arzt- und Praxishilfe, Gesundh., Krankenpfl, Rettungsd., Geburtsh., Psychologie, nichtärztliche Psychotherapie<br>
+<br>
+(Daten für 2022: Stand 03.2023)  <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
 N2.4: Sicherstellung einer ausreichenden medizinischen Infrastruktur im städtischen Raum<br>
