--- a/meta/2-1.md
+++ b/meta/2-1.md
@@ -7,7 +7,7 @@ indicator_sort_order: 02-01-01
  
 # 2. Grafikart auswaehlen: 
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
-graph_type: line  # chart types include: bar, line, binary 
+graph_type: bar  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
 computation_units: t, %
 #data_start_values:  # initialize the field to be shown  
@@ -16,7 +16,7 @@ computation_units: t, %
 national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE: Foodsharing Ingolstadt, Ingolstädter Tafel e. V., INKB   # data source  
+SOURCE_TYPE: Foodsharing Ingolstadt, INKB   # data source  
 source_earliest_available_1: 2022
 source_periodicity_1: Jährlich
 
@@ -27,7 +27,9 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Der Wert setzt sich zusammen aus der Menge an Rest- und Biomüll eines Jahres in Tonnen, der in Ingolstadt angefallen ist und der Menge an geretteten Lebensmitteln. Die Menge der geretteten Lebensmittel wird von Foodsharing und der Tafel übermittelt. Dabei ist zu beachten, dass diese Daten kein exaktes Bild wiederspiegeln, sondern nur als eine Annäherung zu verstehen sind.<br>
+Der Wert setzt sich zusammen aus der Menge an Rest- und Biomüll eines Jahres in Tonnen, der in Ingolstadt angefallen ist und der Menge an geretteten Lebensmitteln. Die Menge der geretteten Lebensmittel wird von Foodsharing übermittelt. Dabei ist zu beachten, dass diese Daten kein exaktes Bild wiederspiegeln, sondern nur als eine Annäherung zu verstehen sind.<br>
+<br>
+Die Steigerung der geretteten Lebensmittel von 2022 auf 2023 ist dabei insbesondere darauf zurückzuführen, dass Foodsharing neue Kooperationen hinzugewinnen konnte. Die gerettete Ware im Schnitt ist hingegen minimal zurückgegangen.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
 N1.2: Lebensmittelverschwendung vermeiden<br>
