--- a/meta/2-1.md
+++ b/meta/2-1.md
@@ -16,7 +16,7 @@ computation_units: t, %
 national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE: Foodsharing Ingolstadt, INKB   # data source  
+SOURCE_TYPE: Gerettete Lebensmittel von <a href="https://foodsharing.de/fairteiler?bid=271">Foodsharing Ingolstadt</a>, Abfallmengen von den <a href="https://www.in-kb.de/">Ingolstädter Kommunalbetriebe</a>   # data source  
 source_earliest_available_1: 2022
 source_periodicity_1: Jährlich
 
